--- a/demo-cluster/.k8s-gen/user-manifests.yaml
+++ b/demo-cluster/.k8s-gen/user-manifests.yaml
@@ -28,9 +28,6 @@ spec:
     requests.memory: "1Gi" 
     limits.cpu: "1"  
     limits.memory: "1Gi" 
-    pods: "2"   
-    services: "5"  
-    persistentvolumeclaims: "4"
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -47,7 +44,7 @@ spec:
   - chart: dao-2048
     helm:
       values: |
-        replicaCount: 1
+        replicaCount: 3
 
         resources: 
           limits:
@@ -57,6 +54,15 @@ spec:
             cpu: 100m
             memory: 128Mi
 
+        nodeSelector:
+          role: storage
+        
+        tolerations:
+          - key: role
+            value: storage
+            operator: Equal
+            effect: NoSchedule
+      
         service:
           type: LoadBalancer
 
