--- a/agents/gitops-agent-NextG-short-state.yaml
+++ b/agents/gitops-agent-NextG-short-state.yaml
@@ -132,7 +132,7 @@ spec:
           * **Namespace & ResourceQuota:**
 
             * Validate only if namespace is new or changed.
-            * Compare requeste/limit CPU/memory against live or desired resourceQuota.
+            * Compare requeste/limit CPU/memory x replicas, against live or desired resourceQuota.
 
           * **API & CRD Schema:**
 
@@ -248,7 +248,6 @@ spec:
         kind: RemoteMCPServer
         apiGroup: kagent.dev
         toolNames:
-        - k8s_check_service_connectivity
         - k8s_get_events
         - k8s_get_available_api_resources
         - k8s_get_cluster_configuration
