deploy game demo app

--- a/demo-resources/fixed-app-manifests.yaml
+++ b/demo-resources/fixed-app-manifests.yaml
@@ -29,8 +29,6 @@ spec:
     limits.cpu: "1"  
     limits.memory: "1Gi" 
     pods: "2"   
-    services: "5"  
-    persistentvolumeclaims: "4"
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -47,25 +45,19 @@ spec:
   - chart: dao-2048
     helm:
       values: |
-        replicaCount: 3
+        replicaCount: 1
 
         resources: 
           limits:
-            cpu: 1500m
+            cpu: 500m
             memory: 128Mi
           requests:
             cpu: 100m
             memory: 128Mi
 
         nodeSelector:
-          role: storage
+          kubernetes.io/hostname: kind-worker
         
-        tolerations:
-          - key: role
-            value: storage
-            operator: Equal
-            effect: NoSchedule
-      
         service:
           type: LoadBalancer
 
