deploy game demo app

--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -41,7 +41,7 @@ jobs:
         id: kagent
         run: |
           PR_ID="${{ github.event.pull_request.number }}"
-          FILE_PATH="./demo-cluster/.k8s-gen/user-manifests.yaml"
+          FILE_PATH="./demo-cluster/.k8s-gen/app-manifests.yaml"
           
           sed -i "1i PR ID: ${PR_ID}. Input manifest start here:" "${FILE_PATH}"
           kagent --api-url "https://demo-smart-idp.uk/api" invoke --agent gitops-agent --file  ${FILE_PATH} | jq -r '.'
