--- a/demo-resources/1-app-manifests.yaml
+++ b/demo-resources/1-app-manifests.yaml
@@ -28,7 +28,6 @@ spec:
     requests.memory: "1Gi" 
     limits.cpu: "1"  
     limits.memory: "1Gi" 
-    pods: "2"   
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -45,19 +44,25 @@ spec:
   - chart: dao-2048
     helm:
       values: |
-        replicaCount: 1
+        replicaCount: 3
 
         resources: 
           limits:
-            cpu: 500m
+            cpu: 1500m
             memory: 128Mi
           requests:
             cpu: 100m
             memory: 128Mi
 
         nodeSelector:
-          kubernetes.io/hostname: kind-worker
+          role: storage
         
+        tolerations:
+          - key: role
+            value: storage
+            operator: Equal
+            effect: NoSchedule
+      
         service:
           type: LoadBalancer
 
