--- a/demo-cluster/.k8s-gen/app-manifests.yaml
+++ b/demo-cluster/.k8s-gen/app-manifests.yaml
@@ -1,1 +1,66 @@
 ---
+apiVersion: argoproj.io/v1alpha1
+kind: AppProject
+metadata:
+  name: kubecon-na
+  namespace: argocd
+spec:
+  description: Demo project
+  sourceRepos:
+    - https://charts.bitnami.com/bitnami
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kubecon-na
+---
+apiVersion: v1
+kind: ResourceQuota
+metadata:
+  name: compute-quota
+  namespace: kubecon-na
+spec:
+  hard:
+    requests.cpu: "1"  
+    requests.memory: "1Gi" 
+    limits.cpu: "1"  
+    limits.memory: "1Gi" 
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: drupal-app
+  namespace: argocd
+spec:
+  destination:
+    namespace: kubecon-na
+    server: https://kubernetes.default.svc
+  project: kubecon-na
+  revisionHistoryLimit: 3
+  sources:
+  - chart: drupal
+    helm:
+      values: |
+        drupalUsername: admin
+
+        externalDatabase:
+          host: drupal-app-db-mariadb.drupal-app.svc.cluster.local
+          port: 3306
+          database: bitnami_drupal
+          user: drupal
+          existingSecret: "drupal-app-externaldb"
+
+        resources:
+          limits:
+            cpu: 2000m
+            memory: 2000M
+          requests:
+            cpu: 2000m
+            memory: 2000M
+
+    repoURL: https://charts.bitnami.com/bitnami
+    targetRevision: 21.0.*
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
