--- a/demo-cluster/.k8s-gen/app-manifests.yaml
+++ b/demo-cluster/.k8s-gen/app-manifests.yaml
@@ -41,6 +41,9 @@ spec:
   - chart: drupal
     helm:
       values: |
+        image:
+          repository: bitnamilegacy/drupal
+          
         drupalUsername: admin
 
         externalDatabase:
@@ -57,6 +60,9 @@ spec:
           requests:
             cpu: 2000m
             memory: 2000M
+
+        mariadb:
+          enabled: false
 
     repoURL: https://charts.bitnami.com/bitnami
     targetRevision: 21.0.*
